# herd

./: exclude.conf  paused.conf  pyproject.toml
src/: scraper.py
src/scraper/: investigator.py  scanner.py
