[project]
name = "herd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "coal-rock", email = "colebrazinski15@gmail.com"},
]
dependencies = ["aiohttp>=3.12.13", "dacite>=1.9.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
scan = "python src/scraper.py"


[tool.pdm]
distribution = false
